--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "simplex-noise": "^3.0.1",
     "three": "^0.140.0",
     "vue": "^3.2.0",
+    "vueperslides": "^3.5.1",
     "vuetify": "^3.0.0",
     "webfontloader": "^1.0.0"
   },
