--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-2024",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -13,11 +13,13 @@
     "simplex-noise": "^3.0.1",
     "three": "^0.140.0",
     "vue": "^3.2.0",
+    "vue-i18n": "^9.8.0",
     "vueperslides": "^3.5.1",
     "vuetify": "^3.0.0",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
+    "@intlify/unplugin-vue-i18n": "^2.0.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "sass": "^1.69.5",
     "vite": "^4.2.0",
