--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.8",
     "@vitejs/plugin-vue": "^5.0.5",
-    "autoprefixer": "^10.4.19",
     "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.6",
+    "tailwindcss": "^4.1.8",
     "vite": "^5.3.1"
   }
 }
